--- a/templates/index.html
+++ b/templates/index.html
@@ -187,10 +187,10 @@
     </script>
     <footer class="footer">
         Vibecoded with ❤️ by
-        <a href="https://www.linkedin.com/in/shahnawazahmed/" target="_blank">Shahnawaz Ahmed</a>
-        (<a href="https://github.com/shahnawazahmed" target="_blank">GitHub</a>).
+        <a href="https://quantshah.github.io" target="_blank">Shahnawaz Ahmed</a>
         <br>
-        Checkout the <a href="https://github.com/shahnawazahmed/your-repo-name" target="_blank">GitHub repository</a> to
+        Checkout the <a href="https://github.com/quantshah/talktoyourseniorsbits" target="_blank">GitHub repository</a>
+        to
         contribute.
     </footer>
 
