--- a/templates/all.html
+++ b/templates/all.html
@@ -5,11 +5,21 @@
     <meta charset="UTF-8">
     <title>All Stories</title>
     <style>
-        body {
+        /* body {
             background-color: #111;
             color: white;
             font-family: sans-serif;
             padding: 40px;
+        } */
+        body {
+            margin: 0;
+            font-family: sans-serif;
+            background: url("static/images/background.png") no-repeat center center fixed;
+            background-size: cover;
+            color: white;
+            text-align: center;
+            height: 100vh;
+            position: relative;
         }
 
         .story-box {
