Add response form
Added a form for juniors to collect responses and what is worrying
them.

--- a/templates/index.html
+++ b/templates/index.html
@@ -153,6 +153,7 @@
             <a href="{{ talk_form_link }}">Talk to a Senior</a>
             {% endif %}
             <a href="{{ sign_up_link }}" target="_blank">Sign Up to Help</a>
+            <a href="{{ respond_form_link }}" target="_blank">Tell us your worries</a>
         </div>
 
         <div class="testimonial-box">
